added continue on error

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -52,7 +52,8 @@ jobs:
     
         - name: Code Coverage
           run: npm run coverage
-          
+          continue-on-error: true
+                    
         - name: Archive Code Coverage
           uses: actions/upload-artifact@v3
           with:
