--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -59,4 +59,16 @@ jobs:
           with:
             name: Code-Coverage-Result
             path: coverage
+    
+    docker-build:
+        name: Docker Build
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
 
+        - name: docker login
+          uses: docker/login-action@v2.2.0
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
