--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -72,3 +72,9 @@ jobs:
           with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
+        
+        - name: Build and push
+          uses: docker/build-push-action@v6
+          with:
+            push: false
+            tags: user/app:latest
