--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -76,5 +76,5 @@ jobs:
         - name: Build and push
           uses: docker/build-push-action@v6
           with:
-            push: false
+            push: true
             tags: user/app:latest
