--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -77,4 +77,4 @@ jobs:
           uses: docker/build-push-action@v6
           with:
             push: true
-            tags: user/app:latest
+            tags: htooaungshine/test-a:latest
