--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -76,5 +76,6 @@ jobs:
         - name: Build and push
           uses: docker/build-push-action@v6
           with:
+            context: .
             push: true
-            tags: htooaungshine/test-a:latest
+            tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
