--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -78,4 +78,4 @@ jobs:
           with:
             context: .
             push: true
-            tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+            tags: ${{ secrets.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
