--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -79,3 +79,9 @@ jobs:
             context: .
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+            
+        - name: Run
+          uses: tj-actions/docker-run@v2
+          with:
+            image: ${{ secrets.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+            name: solarsystem-app
