added docker image testing step

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -79,9 +79,15 @@ jobs:
             context: .
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
-            
-        - name: Run
-          uses: tj-actions/docker-run@v2
-          with:
-            image: ${{ secrets.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
-            name: solarsystem-app
+
+        # - name: Docker Image testing
+        #   uses: tj-actions/docker-run@v2
+        #   with:
+        #     image: ${{ secrets.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+        #     name: solarsystem-app
+      - name: Docker Image testing
+        run: |
+          docker run -d -p 3000:3000 -e DB_URL=$DB_URL ${{ secrets.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+
+          echo Testing image testing
+          wget -q -O - http://localhost:3000/live | grep live
