--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -62,6 +62,7 @@ jobs:
     
     docker-build:
         name: Docker Build
+        needs: [unit-testing, code-coverage]
         runs-on: ubuntu-latest
         steps:
         - name: Checkout Repository
