added k8s version check

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -103,6 +103,8 @@ jobs:
 
         - name: Install kubectl
           uses: azure/setup-kubectl@v4
+          with:
+            version: 'v1.26.0' 
 
         - name: Fetch K8s Cluster Info
           run: |
